@@ -1,25 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX 50uboat-gentoo.el 84 SHA256 4e78b2626113f600c044e68e332a1847ca2b68f8fdb691b512c0402209b0ad1c SHA512 fc349a5f8751437d03975fe2dd93c754ea29a164b626726f724e26b8bfd0f1c96098f471086443e46d95fa9fd4d06da12174305c0327fb06396362fa847a0574 WHIRLPOOL 159ccb808a95acab3a9f8c8730719e5afc9494b13c604726cd2c1d28363ebe4782726d3f026cc08eaf742bbfec997cc3892636d76c28555a4bd08c02b4b7a300
 DIST uboat-1.2.tar.bz2 1978 SHA256 c00a7b6f293358d3daed9db306473a51f9a79270dd2c114167aef04058675a62 SHA512 f77de2c0859a5eb8c09f03aea5be068e2f61f96e10c72d9f18ec6c3fdcc19ab7ca62d606d06aa669b07a89e9f677f5bcb6d3e211b7b7710840cacf9d4f3e307c WHIRLPOOL d4d3f3128fc52203642bcc1f5180c49f610a1865f10c1934a0af116408062c92e73dff0081cbd4c90c4b0a2a4ebeab5cafc6bf0914896fd7bf899d15dbcef3b2
-EBUILD uboat-1.2.ebuild 581 SHA256 eabc56b97c679f522047846218bc2e45347618c980a2cc7051daadb5f8653c8c SHA512 a6ce3a18220ea4b494b1f6c93ba184be93e83f559ea8b8946d8d78d9420270bd042bdc90c1b187bbb53360d54a0e1c320a98f596898b45a580012bf9d2ee570d WHIRLPOOL e52792670f5c27ebb175f4a3203ab27196a280d310da49b0f7feceb37b40b79e6ecc26049a0210f5bdf90670794ddfa4e01ac8d8c6cd18a121f6271200c0d1ca
-MISC ChangeLog 1199 SHA256 4a12d20b7a1ba1b85b27334abf12b3d95b7305f407fc4599ecfc063b069f632f SHA512 674ecfcf4589053d8b075702b609d5d4a332746537b51bd9364b258ea176b80c78d1cf4fa19b2ddc9c82de61890678787f219cc92478b4fdca528843698752ff WHIRLPOOL 0f793254a01eebd890c6387747a1011dcfac67982d498fd45e3a3b9363a46a46c8d37d79b6f538e8cce3d8dfb513fcaf078a186b0657fab8c29157b9916c6bd4
+EBUILD uboat-1.2.ebuild 583 SHA256 5aa7fd755e733b4c83a909370f1f379ce87235844fd04d1211f94071a56fad69 SHA512 fb495b5f9590118714e099f9b33ff88d6f0e15326fe8fba98224286be108afc8fd6dde95a765c2534306dab51ea22ea09d20e7364b6eb9ae75efdba6ec4bfe5e WHIRLPOOL 6a0b0f6a7bd3ab711ad62e3ab96e3d4f6f67e267ee647484a2d0155e9e33112e2e14698e4e628217d0afc94793951d318fb8e65e54850dae4d1fee0713d81523
+MISC ChangeLog 1279 SHA256 a2cc987ac586d2045d81c0504a6469c1ea6fd6bf31f3a799bda6955d05fa31a4 SHA512 73c395180ab6be8ebb7c7a495511e6132f247a9b0ae55380b0bedeed03d1f966cc791262de0672e9e2271d1b13a74e6e870f3eb3e1059274e271c3889f5c0ab5 WHIRLPOOL c388c86368438ddcfde5eeb8e59b366c2f8afcb986f85b6d6c6a5a11afb22b5f2b34372b5ec68665d2b06820ce0a578cab02709550d71a37b834bd4105ab5795
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9fYJAAoJEDxpGckxwJCBB1MP/1Lc/w8is93BUXLHcIgHSsAt
-Dqrd4xlqoKBeg2CMLEf0p7786rg96fsTzVmNujk2yIIPfQowz2Dy8pkelEqwkuty
-oaAJyOq47+9ne0OECw6tK2cCQqFzdg/L2LYnWyxTlm7axQuj7cCef5t4+x6bhW90
-uljuejVoccDKmD9V6i6oy2Om2/jGhbDxcONkyom5ThOOlZ5B2uoqtS+jOHXdeZra
-PtXmM+qX8ABhtsrifAE/800buVLfU0+e9hUDvZYp8UA2NrBj85YFOb73lZz4u3N7
-+Z8cacLA3/IHNS8rSYEw+GhgfwqTjRpI9jVVJcWnt/QoEfy+oWXjahkO2JR0h8TV
-rxjuaOR5jxEwv6pyNLYJCRqKl3xYaw7e/naC0pBckzRaUZ3mk+rHLMvchRhE+SiM
-2IB+2usHlMWuY/mnVbBPzf8B332bqp3SdN7tVXvXMAUVeS8M/qBk9wbG7AD95I3Y
-OVOqNtbpda0LZgBXpWFrX3bUI/QVo2efZHYMyRPJKu84WNw34Og+93ojriQHuEOZ
-T4Etdojwd+xZGFDzlEJf0u2GodxfMbbPdP20QJYrrl9eLhb1RZ54ElykXAYVKVvs
-3VRjjhjFNh1nuSCkRiwv8ySio0e269Zvp1HxGJnFSM19PlR7zHdyo3TeGgOlCE5J
-atWNZClZuZcmfWomDE2T
-=PeR9
+iQGcBAEBCAAGBQJSxDsnAAoJEJQzkH1pP7W4S8AL/0SofJ3WZ/7F+M+rbuckqcCI
+aWMc1Cte7PKnBrAdvhPbOxTbvildoMoOFKc3xr/NVuYJ237QYT85ummZHZOfpjAN
+0d3dNFbpmJrXem5IvivSgpPDb5+bDrQtXiMiAKdgl07+F5ehT0nbpvYaKxaH4/3Q
+PPRyvlQ6hGt18vxbDGU0k9V50908fwORMytqgf6YoSKGjbS38THKqQFpI1B4jJHw
+kqxmQURuljUuyKJ+qxgQ/VlwytFzC7dkaph4dCYlMMgyk8SAbayiveh7YfsSSknC
+Zl/bHDA4soXXX/zOFxb+5g/WBtzXipFwRY7EAXQN9+kLJ4QDI400MuHa94f6sDIh
+eNrHI4aQ81RbbY2hLslg4OUpf3B8Eb3zLC6NCq/QsTl8As7lqdH0Mzoii2vxHev3
+L9s167sii1ZCtZeSOPEfFA+MdDBskSfEy5bFnuGXL/Kji/EE7/QPF6752qAeEVo4
+eKd5Vk4Ss35p3XFyoLOB6Qr8a8zKfFMYciv+xIgXdg==
+=4sZ5
 -----END PGP SIGNATURE-----
